# synthetic-ledger-dash-ui

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
api/: Dockerfile  pyproject.toml
api_druid/: Dockerfile  pyproject.toml
api_druid/src/api_druid/: main.py  repository.py
api_materialize/: Dockerfile  pyproject.toml
api_pinot/: Dockerfile  pyproject.toml
docs/: benchmark-backend-registry.yaml  benchmark-metrics-collection-playbook.md  benchmarking-tcc-outline.md  materialize-benchmark-state-of-the-art.md
domain_data/: accounts.json  channels.json  company_profile.json  products.json  suppliers.json  warehouses.json
frontend/: Dockerfile  Dockerfile.druid  index.html  package-lock.json  package.json  vite.config.ts
frontend/nginx/: default-druid.conf  default.conf
frontend/src/: App.tsx  api.ts  styles.css
frontend_pinot/: Dockerfile.clickhouse  Dockerfile.druid  Dockerfile.materialize  index.html  package-lock.json  package.json
frontend_pinot/nginx/: default-clickhouse.conf  default-druid.conf  default-materialize.conf  default.conf
frontend_pinot/src/: main.tsx  styles.css  vite-env.d.ts
k8s/base/: api-deployment.yaml  frontend-deployment.yaml  kustomization.yaml  namespace.yaml  otel-deployment.yaml  producer-deployment.yaml  storage-writer-deployment.yaml
master_data/: Dockerfile  pyproject.toml
master_data/src/master_data/: main.py
otel/: otel-config.yaml
producer/: Dockerfile  pyproject.toml
producer/src/producer/: domain.py  main.py
producer/src/producer/schemas/: accounting_event_v1.avsc  accounting_event_v2.avsc
realtime_gateway/: Dockerfile  pyproject.toml
relatorio/: .gitignore  README.md  build.sh  frontmatter.md  metadata.yaml  template.tex
relatorio/chapters/: 01-introducao.md  02-fundamentacao-teorica.md  03-estado-da-arte-tecnologico.md  04-modelo-do-problema-e-arquitetura.md  05-metodologia-de-benchmark.md  06-resultados-preliminares.md  07-analise-tecnica-por-backend.md  07-conclusao.md  08-discussao-comparativa-ampliada.md  09-implicacoes-de-engenharia-e-programa-experimental.md  10-matriz-de-decisao-arquitetural.md  appendix-a-protocolo-de-coleta.md  appendix-b-especificacao-de-artefatos.md  appendix-c-dossies-operacionais.md  appendix-d-glossario-analitico.md  appendix-e-programa-de-reruns-e-cenarios.md
scripts/: smoke_accounting.py  stack-selection.sh  verify_realtime_projection.mjs  verify_realtime_stream.mjs
scripts/benchmark/: collect_api_latencies.py  collect_container_stats.py  collect_debug_snapshots.py  collect_health_timeline.py  common.sh  (+9 more)
storage_adapters/: clickhouse_adapter.py  druid_adapter.py  pinot_adapter.py
storage_writer/: Dockerfile  pyproject.toml
storage_writer/src/storage_writer/: main.py  master_data.py  materialize.py
storage_writer/src/storage_writer/adapters/: __init__.py  base.py  clickhouse_adapter.py  druid_adapter.py  pinot_adapter.py
(+129 files in other folders)
