[project]
name = "synthetic-ledger-dash-ui"
version = "0.0.1-rc.1"
description = "Monorepo para geração de eventos contábeis sintéticos, ingestão observável e dashboard near-real-time"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "orjson>=3.10.0",
  "confluent-kafka>=2.5.0",
  "fastavro>=1.9.5",
  "opentelemetry-proto>=1.27.0",
  "protobuf>=5.28.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
